fixed header spacing @media

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,7 +155,12 @@ h1, h2, h3, h4, h5, h6 {
 	margin-top: 3%;
 	margin-bottom: 3%;
 }
-@media(max-width:800px){
+@media(max-width:740px){
+.fttHeader {
+		text-align: center;
+		min-height: 650px;
+		width: 100%;
+	}
 .row {
 		display: flex;
 		flex-direction: column;
@@ -213,6 +218,10 @@ h1, h2, h3, h4, h5, h6 {
     flex-direction: column;
     justify-content: space-between;
     margin-bottom: 11%;
+}
+.fttHeader{
+    text-align: center;
+    width: 100%;
 }
 /* ==========================================================================
    Wrap Sections
